--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,13 +1,13 @@
 <article class="post">
 	<header class="post-header home">
-		<div class="post-title">Category - <span id='category-name'></span></div>
+		<div class="post-title">分类 - <span id='category-name'></span></div>
 	</header>
 
 	<div class="post-content">
 		{%- if site.posts.size > 0 -%}
 		<ul class="post-list">
 			{%- for post in site.posts -%}
-			<li class="post-list-item post-category-{{post.categories}}">
+			<li class="post-list-item" categories="{{post.categories | join: ' '}}">
 				<!-- {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%} -->
 				{%- assign date_format = "%Y/%m/%d" -%}
 				<span class="post-date">{{ post.date | date: date_format }}</span>
@@ -16,9 +16,9 @@
 				</a>
 				{%- if site.show_excerpts -%}{{ post.excerpt }}{%- endif -%}
 			</li>
-		  	{%- endfor -%}
+			{%- endfor -%}
 		</ul>
-	  	{%- endif -%}
+		{%- endif -%}
 	</div>
 </article>
 
@@ -28,9 +28,8 @@
 		if (window.location.hash) {
 			let hash = window.location.hash.substring(1);
 			$('#category-name').text(hash.substring(0, 1).toUpperCase() + hash.substring(1));
-			let category_class = '.post-category-' + hash;
 			let items = $('.post-list-item').each((i, e) => {
-				if (!$(e).hasClass('post-category-' + hash)) {
+				if (!$(e)[0].getAttribute("categories").includes(hash)) {
 					$(e).hide();
 				} else {
 					$(e).show();
@@ -42,7 +41,7 @@
 		removeCategory();
 	});
 	$(document).ready(() => {
-		removeCategory();	
+		removeCategory();
 	})
-	
+
 </script>
